// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneIntegrationBreadcrumbs/> render() should render for SMS integrations 1`] = `
<nav
  aria-label="breadcrumb"
  class=""
>
  <ol
    class="breadcrumb"
  >
    <li
      class="breadcrumb-item"
    >
      <a
        to="/app/settings/channels/sms/integrations"
      >
        SMS
      </a>
    </li>
    <li
      class="breadcrumb-item"
    >
      ☎️
       
      My Phone Integration
      <small
        class="text-muted ml-2"
      >
        +1 415 111 2222
      </small>
    </li>
  </ol>
</nav>
`;

exports[`<PhoneIntegrationBreadcrumbs/> render() should render for voice integrations 1`] = `
<nav
  aria-label="breadcrumb"
  class=""
>
  <ol
    class="breadcrumb"
  >
    <li
      class="breadcrumb-item"
    >
      <a
        to="/app/settings/channels/phone/integrations"
      >
        Voice
      </a>
    </li>
    <li
      class="breadcrumb-item"
    >
      ☎️
       
      My Phone Integration
      <small
        class="text-muted ml-2"
      >
        +1 415 111 2222
      </small>
    </li>
  </ol>
</nav>
`;
